logo added using img

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 </header>
 
 <main>
+  <img=https://unsplash.com/photos/thLMFz8fVL4/>
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
