Changed background image
 and added a link instead

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <!-- Hero -->
 
 
-        <div class="back_img" style="background-image: url('./Pictures/Background.jpg'); " height="360px">
+        <div class="back_img" style="background-image: url('https://cdn.pixabay.com/photo/2022/02/01/11/57/sea-shore-6986097_1280.jpg'); " height="360px">
         
             <div class="px-4 py-5 my-5 text-center background-color: black;       opacity: 1">
                 <img class="d-block mx-auto mb-4" src="./Cylatt logo.png" alt="" width="72" height="57">
