--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                   <svg class="bi" width="1em" height="1em"><use xlink:href="#tools"></use></svg>
                 </div>
                 <div>
-                  <h2>Software Solutions</h2>
+                  <h2>Architectural Solutions</h2>
                   <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                   <a href="#" class="btn btn-primary">
                     Know More
