--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="back_img" style="background-image: url('https://cdn.pixabay.com/photo/2022/02/01/11/57/sea-shore-6986097_1280.jpg'); " height="360px">
         
             <div class="px-4 py-5 my-5 text-center background-color: black;       opacity: 1">
-                <img class="d-block mx-auto mb-4" src="./Cylatt logo.png" alt="" width="72" height="57">
+                <img class="d-block mx-auto mb-4" src="https://cdn.pixabay.com/photo/2022/01/19/03/02/penrose-triangle-6948661_1280.jpg" alt="" width="72" height="57">
                 <h1 class="display-5 fw-bold " color="white">Who are we?</h1>
              <div class="col-lg-6 mx-auto background-color: black; opacity: 1"> <!--trying to add a dark box behind but not working, also font color not changing-->
                 <p class="lead mb-4" color="white">We are company that offers Engineering & Management consultancy for small to medium scale Construction Projects. Cylatt helps you to grow by bringing your dreams to life. 
