Changed Background image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <!-- Hero -->
 
 
-        <div class="back_img" style="background-image: url('https://cdn.pixabay.com/photo/2022/02/01/11/57/sea-shore-6986097_1280.jpg'); " height="360px">
+        <div class="back_img" style="background-image: url('https://images.unsplash.com/photo-1485628390555-1a7bd503f9fe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80'); " height="360px">
         
             <div class="px-4 py-5 my-5 text-center background-color: black;       opacity: 1">
                 <img class="d-block mx-auto mb-4" src="https://cdn.pixabay.com/photo/2022/01/19/03/02/penrose-triangle-6948661_1280.jpg" alt="" width="72" height="57">
