--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <title >Cylatt- Build you up</title>
 
-        <link rel="icon" href="./favicon.ico" type="image/x-icon">
+        <link rel="icon" href="./pentrose.ico" type="image/x-icon">
         <style>
             .back_img{
                 display:block;
