--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <div class="container">
             <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
               <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+                <svg class="bi me-2" width="40" height="32"><!--<use xlink:href="#bootstrap"></use>-->
+                  <image src="https://cdn.pixabay.com/photo/2022/01/19/03/02/penrose-triangle-6948661_1280.jpg"/></svg>
                 <span class="fs-4">CYLATT</span>
               </a>
         
