--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
         <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('./Pictures/Services/management.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Project Management Consultancy</h2>
+              <a href="#" class="btn btn-dark">
+                    Know More
+                  </a>
             <ul class="d-flex list-unstyled mt-auto">
 
             </ul>
@@ -115,6 +118,9 @@
         <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('./Pictures/Services/mechanical.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Mechanical Engineering Consultancy</h2>
+              <a href="#" class="btn btn-dark">
+                    Know More
+                  </a>
             <ul class="d-flex list-unstyled mt-auto">
             </ul>
           </div>
@@ -125,7 +131,7 @@
         <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('https://cdn.pixabay.com/photo/2016/11/24/20/30/architecture-1857175_1280.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Architectural Solutions</h2>
-               <a href="#" class="btn btn-primary">
+               <a href="#" class="btn btn-dark">
                     Know More
                   </a>
             <ul class="d-flex list-unstyled mt-auto">
@@ -135,49 +141,10 @@
       </div>
     </div>
   </div>
+        
         <!-- CARDS------------------>
 
-        <div class="container px-4 py-5" id="hanging-icons">
-            <h2 class="pb-2 border-bottom">Our Services</h2>
-            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-              <div class="col d-flex align-items-start">
-                <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-                  <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
-                </div>
-                <div>
-                  <h2>Project Management Consultancy</h2>
-                  <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-                  <a href="#" class="btn btn-primary">
-                    Know More
-                  </a>
-                </div>
-              </div>
-              <div class="col d-flex align-items-start">
-                <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-                  <svg class="bi" width="1em" height="1em"><use xlink:href="#cpu-fill"></use></svg>
-                </div>
-                <div>
-                  <h2>Building Mechanical Engineering Consultancy</h2>
-                  <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-                  <a href="#" class="btn btn-primary">
-                    Know More
-                  </a>
-                </div>
-              </div>
-              <div class="col d-flex align-items-start">
-                <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-                  <svg class="bi" width="1em" height="1em"><use xlink:href="#tools"></use></svg>
-                </div>
-                <div>
-                  <h2>Architectural Solutions</h2>
-                  <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-                  <a href="#" class="btn btn-primary">
-                    Know More
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
+     
 
 
 
