--- a/index.html
+++ b/index.html
@@ -149,8 +149,10 @@
 
 
         <!-- Cards/Our Team -->
+        
 
         <div class="container">
+            <h2 class="pb-2 border-bottom">Our Team</h2>
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
               <div class="col">
