--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </div>
 
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('./Pictures/Services/mechanical.jpg');">
+        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg back_img" style="background-image: url('./Pictures/Services/mechanical.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Mechanical Engineering Consultancy</h2>
               <a href="#" class="btn btn-dark">
@@ -128,7 +128,7 @@
       </div>
 
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('https://cdn.pixabay.com/photo/2016/11/24/20/30/architecture-1857175_1280.jpg');">
+        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg back_img" style="background-image: url('https://cdn.pixabay.com/photo/2016/11/24/20/30/architecture-1857175_1280.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Architectural Solutions</h2>
                <a href="#" class="btn btn-dark">
