--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
                 background-position: centre centre;
                 background-size: cover;
             }
+            
+            .form_align{
+                width:300;
+                height:58;
+            }
         </style>
 
 
@@ -153,12 +158,12 @@
     <h1 class="h3 mb-3 fw-normal">Contact Us Today!</h1>
       <p> Enter your details and a member of our team will reach out to you. <p>
      
-    <div class="container px-4 py-5">
-        <div class="form-floating">
+    <div class="container px-4 py-5 form_align">
+        <div class="form-floating ">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Email address</label>
         </div>
-        <div class="form-floating">
+        <div class="form-floating" >
             <input type="text" class="form-control" id="floatingInput" placeholder="+xxxxxxxxxxxx">
             <label for="floatingPassword">Phone Number</label>
         </div>
