--- a/index.html
+++ b/index.html
@@ -159,18 +159,18 @@
       <p> Enter your details and a member of our team will reach out to you. <p>
      
     <div class="container px-4 py-5 form_align">
-        <div class="form-floating ">
+        <div class="form-floating" width=300 height=58>
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Email address</label>
         </div>
-        <div class="form-floating" >
+        <div class="form-floating" width=300 height=58>
             <input type="text" class="form-control" id="floatingInput" placeholder="+xxxxxxxxxxxx">
             <label for="floatingPassword">Phone Number</label>
         </div>
      </div>
 
     
-    <button class="w-100 btn btn-lg btn-dark" type="submit">Contact Me</button>
+    <button class="w-100 btn btn-lg btn-dark" width=300 height=58 type="submit">Contact Me</button>
   
   </form>
 </main>
